first merge