@@ -14,26 +14,24 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package it.redhat.spid.saml;
+package org.keycloak.broker.spid;
 
 import org.keycloak.dom.saml.v2.assertion.NameIDType;
+import org.keycloak.dom.saml.v2.assertion.SubjectType;
 import org.keycloak.dom.saml.v2.protocol.AuthnRequestType;
-import org.keycloak.saml.SAML2AuthnRequestBuilder;
-import org.keycloak.saml.SAML2NameIDPolicyBuilder;
+import org.keycloak.dom.saml.v2.protocol.ExtensionsType;
+import org.keycloak.dom.saml.v2.protocol.RequestedAuthnContextType;
+import org.keycloak.saml.SAML2NameIDBuilder;
+import org.keycloak.saml.SAML2RequestedAuthnContextBuilder;
 import org.keycloak.saml.SamlProtocolExtensionsAwareBuilder;
 import org.keycloak.saml.processing.api.saml.v2.request.SAML2Request;
 import org.keycloak.saml.processing.core.saml.v2.common.IDGenerator;
 import org.keycloak.saml.processing.core.saml.v2.util.XMLTimeUtil;
 import org.w3c.dom.Document;
 
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.logging.Logger;
-
-import org.keycloak.dom.saml.v2.protocol.ExtensionsType;
 
 /**
  * @author pedroigor
@@ -42,7 +40,7 @@ public class SpidSAML2AuthnRequestBuilder implements SamlProtocolExtensionsAware
 
     private final AuthnRequestType authnRequestType;
     protected String destination;
-    protected String issuer;
+    protected NameIDType issuer;
     protected final List<NodeGenerator> extensions = new LinkedList<>();
 
     public SpidSAML2AuthnRequestBuilder destination(String destination) {
@@ -50,9 +48,13 @@ public class SpidSAML2AuthnRequestBuilder implements SamlProtocolExtensionsAware
         return this;
     }
 
-    public SpidSAML2AuthnRequestBuilder issuer(String issuer) {
+    public SpidSAML2AuthnRequestBuilder issuer(NameIDType issuer) {
         this.issuer = issuer;
         return this;
+    }
+
+    public SpidSAML2AuthnRequestBuilder issuer(String issuer) {
+        return issuer(SAML2NameIDBuilder.value(issuer).build());
     }
 
     @Override
@@ -75,19 +77,23 @@ public class SpidSAML2AuthnRequestBuilder implements SamlProtocolExtensionsAware
         return this;
     }
 
+    public SpidSAML2AuthnRequestBuilder attributeConsumingServiceIndex(Integer attributeConsumingServiceIndex) {
+        this.authnRequestType.setAttributeConsumingServiceIndex(attributeConsumingServiceIndex);
+        return this;
+    }
+
     public SpidSAML2AuthnRequestBuilder forceAuthn(boolean forceAuthn) {
         this.authnRequestType.setForceAuthn(forceAuthn);
         return this;
     }
 
-    /*
     public SpidSAML2AuthnRequestBuilder isPassive(boolean isPassive) {
         this.authnRequestType.setIsPassive(isPassive);
         return this;
-    }*/
+    }
 
-    public SpidSAML2AuthnRequestBuilder nameIdPolicy(SAML2NameIDPolicyBuilder nameIDPolicy) {
-        this.authnRequestType.setNameIDPolicy(nameIDPolicy.build());
+    public SpidSAML2AuthnRequestBuilder nameIdPolicy(SpidSAML2NameIDPolicyBuilder nameIDPolicyBuilder) {
+        this.authnRequestType.setNameIDPolicy(nameIDPolicyBuilder.build());
         return this;
     }
 
@@ -96,54 +102,60 @@ public class SpidSAML2AuthnRequestBuilder implements SamlProtocolExtensionsAware
         return this;
     }
 
+    public SpidSAML2AuthnRequestBuilder subject(String subject) {
+        String sanitizedSubject = subject != null ? subject.trim() : null;
+        if (sanitizedSubject != null && !sanitizedSubject.isEmpty()) {
+            this.authnRequestType.setSubject(createSubject(sanitizedSubject));
+        }
+        return this;
+    }
+
+    private SubjectType createSubject(String value) {
+        NameIDType nameId = new NameIDType();
+        nameId.setValue(value);
+        nameId.setFormat(this.authnRequestType.getNameIDPolicy() != null ? this.authnRequestType.getNameIDPolicy().getFormat() : null);
+        SubjectType subject = new SubjectType();
+        SubjectType.STSubType subType = new SubjectType.STSubType();
+        subType.addBaseID(nameId);
+        subject.setSubType(subType);
+        return subject;
+    }
+
+    public SpidSAML2AuthnRequestBuilder requestedAuthnContext(SpidSAML2RequestedAuthnContextBuilder requestedAuthnContextBuilder) {
+        RequestedAuthnContextType requestedAuthnContext = requestedAuthnContextBuilder.build();
+
+        // Only emit the RequestedAuthnContext element if at least a ClassRef or a DeclRef is present
+        if (!requestedAuthnContext.getAuthnContextClassRef().isEmpty() ||
+            !requestedAuthnContext.getAuthnContextDeclRef().isEmpty())
+            this.authnRequestType.setRequestedAuthnContext(requestedAuthnContext);
+
+        return this;
+    }
+
     public Document toDocument() {
         try {
-            
-            AuthnRequestType authnRequestType = this.authnRequestType;
+            AuthnRequestType authnRequestType = createAuthnRequest();
 
-            NameIDType nameIDType = new NameIDType();
-
-            nameIDType.setValue(this.issuer);
-
-            authnRequestType.setIssuer(nameIDType);
-
-            String hostDestination = getDestinationHost(this.destination);
-            
-            authnRequestType.setDestination(URI.create(hostDestination));
-            
-
-            if (!this.extensions.isEmpty()) {
-                ExtensionsType extensionsType = new ExtensionsType();
-                for (NodeGenerator extension : this.extensions) {
-                    extensionsType.addExtension(extension);
-                }
-                authnRequestType.setExtensions(extensionsType);
-            }
-
-            return new SpidSAML2Request().convert(authnRequestType);
+            return new SAML2Request().convert(authnRequestType);
         } catch (Exception e) {
-            e.printStackTrace();
             throw new RuntimeException("Could not convert " + authnRequestType + " to a document.", e);
         }
     }
 
-    private String getDestinationHost(String destination) {
+    public AuthnRequestType createAuthnRequest() {
+        AuthnRequestType res = this.authnRequestType;
 
-        try {
-            URL url = new URL(destination);
-            String hostAndProtocol = url.getProtocol() + "://" + url.getHost();
+        res.setIssuer(issuer);
+        res.setDestination(URI.create(this.destination));
 
-            if (url.getPort() > 0) {
-                return hostAndProtocol + ":" + url.getPort();
+        if (! this.extensions.isEmpty()) {
+            ExtensionsType extensionsType = new ExtensionsType();
+            for (NodeGenerator extension : this.extensions) {
+                extensionsType.addExtension(extension);
             }
-
-            return hostAndProtocol;
-
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
-
+            res.setExtensions(extensionsType);
         }
 
-        return destination;
+        return res;
     }
 }
